# connector

./: LICENSE  Makefile  README.md  pyproject.toml  run.py
src/: account.py  advertisement.py  base.py  config.py  connector.py  exception.py
src/libs/: request.py  status_code.py
tests/: conftest.py  fixtures.py  mock.py  test_account.py  test_advertisement.py  test_base.py  test_config.py  test_connector.py
