[project]
name = "connector"
version = "0.1.0"
description = ""
authors = [{ name = "Pradeep", email = "tammali.pradeep.kumar@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
format.quote-style = "single"
lint.select = [
    "E", # Errors
    "F", # Formatting
    "W", # Warnings
]
lint.ignore = [
    # format
    "E501", # line too long
]
# Ignore assert usage in tests
lint.per-file-ignores.'tests/*.py' = ["S101"]
lint.isort.combine-as-imports = true
lint.mccabe.max-complexity = 10

[tool.pylint.MASTER]
ignore-paths = ['tests/*']

[tool.pylint.FORMAT]
indent-string = '    '
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = '''
    missing-docstring,
    line-too-long,
    import-error,
    fixme,
    no-value-for-parameter,
    too-few-public-methods
'''

[tool.pytest.ini_options]
env = ['APP_ENVIRONMENT = unittest']

[[tool.mypy.overrides]]
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
module = 'src.*'

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.markdownlint]
default = true

[tool.poetry.group.dev.dependencies]
ipython = "^9.0.2"
types-requests = "^2.32.0.20250328"
